--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ networkx = "^2.4"
 matplotlib = "^3.2.2"
 faker = "^4.1.1"
 netconan = "^0.11.2"
+jsonpath-ng = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
